--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "multer": "^2.0.0",
+    "node-fetch": "^3.3.2",
     "openai": "^6.5.0",
+    "sharp": "^0.33.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "supabase": "^2.54.11"
   }
 }
