--- a/python-vision-service/Dockerfile
+++ b/python-vision-service/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.11-slim
 
-# Install system dependencies for OpenCV
+# Install system dependencies for OpenCV and Tesseract
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
+    tesseract-ocr \
+    tesseract-ocr-eng \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
